--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/native-stack": "^6.9.5",
+    "@react-navigation/stack": "^6.3.8",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
+    "pod-install": "^0.1.38",
     "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native": "0.70.6",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-navigation": "^4.4.4",
+    "upgrade": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
